exports[`test should render a ChoiceField with a checkbox 1`] = `
<label
  className="terra-Form-control"
  required={true}>
  <Input
    className="healtheintent-application"
    name="children_present"
    onChange={[Function]}
    required={false}
    type="checkbox"
    value="children_present" />
  Do you have any Children?
</label>
`;

exports[`test should render a ChoiceField with a radio 1`] = `
<label
  className="terra-Form-control"
  required={true}>
  <Input
    className="healtheintent-application"
    name="children_present"
    onChange={[Function]}
    required={false}
    type="radio"
    value="children_present" />
  Do you have any Children?
</label>
`;

exports[`test should render a default checkbox when type is "checkbox" 1`] = `
<label
  className="terra-Form-control">
  <Input
    name={null}
    onChange={[Function]}
    required={false}
    type="checkbox" />
</label>
`;

exports[`test should render a default checkbox when type is "radio" 1`] = `
<label
  className="terra-Form-control">
  <Input
    name={null}
    onChange={[Function]}
    required={false}
    type="radio" />
</label>
`;
